--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,15 @@
-name: Terraform Pipeline
-
-on:
-  push:
-    branches:
-      - pipeline
-
-env:
-  TERRAFORM_VERSION: 1.9.2
+name: Open new issue
+on: workflow_dispatch
 
 jobs:
-  on-aws:
-    name: AWS provider
+  open-issue:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      issues: write
     steps:
-      - name: Step 01 - Terraform Setup
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: $TERRAFORM_VERSION
-
-      - name: Step 02 - Terraform Version
-        run: terraform --version
-
-      - name: Step 03 - CheckOut GitHub Repo
-        uses: actions/checkout@v4
-
-      - name: Step 04 - Authenticate with AWS
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Step 05 - Terraform Init
-        run: terraform -chdir=./terraform init
-
-      - name: Step 06 - Terraform Validate
-        run: terraform -chdir=./terraform validate
-
-      # - name: Step 07 - Terraform Plan
-      #   # run : terraform -chdir=./terraform plan -out tfplan
-      #   run: terraform -chdir=./terraform plan -destroy -out tfplan
-
-      # - name: Step 08 - Terraform Apply
-      #   run: terraform -chdir=./terraform apply tfplan
-
-      - name: Step 09 - Terraform Show
-        run: terraform -chdir=./terraform show
+      - run: |
+          gh issue --repo ${{ github.repository }} \
+            create --title "Issue title" --body "Issue body"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
