--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Step 05 - Terraform Init
         run: terraform -chdir=./terraform init
 
-      - name: Step 06 - Terraform Validate
-        run: terraform -chdir=./terraform validate
+      # - name: Step 06 - Terraform Validate
+      #   run: terraform -chdir=./terraform validate
 
       # - name: Step 07 - Terraform Plan
       #   # run : terraform -chdir=./terraform plan -out tfplan
