--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,15 @@ jobs:
       - name: Step 05 - Terraform Init
         run: terraform -chdir=./terraform init
 
-      # - name: Step 06 - Terraform Validate
-      #   run: terraform -chdir=./terraform validate
+      - name: Step 06 - Terraform Validate
+        run: terraform -chdir=./terraform validate
 
       # - name: Step 07 - Terraform Plan
       #   # run : terraform -chdir=./terraform plan -out tfplan
       #   run: terraform -chdir=./terraform plan -destroy -out tfplan
 
-      # - name: Step 08 - Terraform Apply
-      #   run: terraform -chdir=./terraform apply tfplan
+      - name: Step 08 - Terraform Apply
+        run: terraform -chdir=./terraform apply tfplan
 
       - name: Step 09 - Terraform Show
         run: terraform -chdir=./terraform show
