--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,9 @@ jobs:
       - name: Step 06 - Terraform Validate
         run: terraform -chdir=./terraform validate
 
-      # - name: Step 07 - Terraform Plan
-      #   # run : terraform -chdir=./terraform plan -out tfplan
-      #   run: terraform -chdir=./terraform plan -destroy -out tfplan
+      - name: Step 07 - Terraform Plan
+        run: terraform -chdir=./terraform plan -out tfplan
+        # run: terraform -chdir=./terraform plan -destroy -out tfplan
 
       - name: Step 08 - Terraform Apply
         run: terraform -chdir=./terraform apply tfplan
